--- a/SqliteDemo/app/src/main/res/layout/activity_main.xml
+++ b/SqliteDemo/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_below="@id/tv_name"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="3dp"
         android:paddingLeft="10dp"
         android:text="EMAIL:"
         android:textSize="18sp"></TextView>
@@ -53,7 +53,7 @@
         android:layout_below="@id/tv_email"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="35dp"
         android:paddingLeft="10dp"
         android:text="MOBILE NUMBER:"
         android:textSize="18sp"></TextView>
@@ -61,7 +61,7 @@
     <EditText
         android:id="@+id/ed_phone"
         android:layout_width="228dp"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/ed_email"
         android:layout_marginLeft="107dp"
         android:layout_marginTop="10dp"
@@ -75,14 +75,15 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:gravity="center"
         android:text="no records"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_centerInParent="true"
+        android:scrollbars="vertical"
+        android:layout_below="@id/tv_phone"
+        android:layout_marginTop="150dp"
+        android:layout_centerHorizontal="true"
         android:id="@+id/tv_records"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -91,9 +92,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_phone"
-        android:layout_marginTop="524dp"
-        android:text="WRITE"
+        android:layout_marginTop="350dp"
         android:onClick="myClick"
+        android:text="WRITE"
         android:textSize="18sp"></Button>
 
     <Button
@@ -102,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_phone"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="524dp"
+        android:layout_marginTop="350dp"
         android:layout_toRightOf="@id/btn_write"
         android:text="READ"
         android:onClick="myClick"
@@ -114,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_phone"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="524dp"
+        android:layout_marginTop="350dp"
         android:layout_toRightOf="@id/btn_read"
         android:text="UPDATE"
         android:onClick="myClick"
@@ -126,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_phone"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="524dp"
+        android:layout_marginTop="350dp"
         android:layout_toRightOf="@id/btn_update"
         android:text="REMOVE"
         android:onClick="myClick"
