--- a/listviewpractice/app/src/main/res/layout/activity_main.xml
+++ b/listviewpractice/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:id="@+id/tv_main"
+        >
+
+    </TextView>
+
+
 
     <ListView
         android:id="@+id/listview"
