--- a/listviewpractice/app/src/main/res/layout/activity_move_list.xml
+++ b/listviewpractice/app/src/main/res/layout/activity_move_list.xml
@@ -8,8 +8,8 @@
     tools:context=".MoveList">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/iv_student_img"
         >
 
